# tenir_governance

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  HARDENING_REPORT_v1.0.0-rc2.md  LICENSE  README.md  SECURITY.md  desktop.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tenir-ci.yml
benchmark/: benchmark_policy_engine.py
interface/: TENIR_Interface_2cIronOmega_v1.html
r4/: pyproject.toml
r4/examples/: ocp_sovereignty_pilot.html  ocp_sovereignty_pilot_sample.json  sample_events.json  standalone_burn_overlay.py  standalone_shadow_monitor.py
r4/schemas/: tenir_estate_layer_digest.schema.json  tenir_estate_macro_digest.schema.json
r4/tenir_v4_test/: __init__.py  adjudication.py  cli.py  control_auth.py  controller.py  ledger.py  models.py  overlay_burn.py  runtime_support.py  trajectory.py
r4/tests/: test_adjudication.py  test_governance_integration.py  test_monitor.py
r4/tools/: generate_ocp_sovereignty_pilot.py  run_limit_scenarios.py  run_uat_bundle.py
r5_hardened/IRON_OMEGA_R5/: ARTIFACT_MANIFEST.json  README_R5.md  __init__.py  conftest.py  r5_server.py  test_institutional_hardening.py
r5_hardened/IRON_OMEGA_R5/core/: ces_matrix.py  trajectory.py
r5_hardened/IRON_OMEGA_R5/r5_distributed_crypto/merkle/: distributed_ledger.py
r5_hardened/IRON_OMEGA_R5/r5_graph_ontology/: neo4j_graph.py
r5_hardened/IRON_OMEGA_R5/r5_neuro_symbolic/inference/: nsl_inference.py
r5_wired/: ARTIFACT_MANIFEST.json  r5_server.py  requirements_r5.txt  test_r5_all.py  test_r5_governance_integration.py
r5_wired/core/: __init__.py  ces_matrix.py  trajectory.py
r5_wired/r5_distributed_crypto/merkle/: distributed_ledger.py
r5_wired/r5_neuro_symbolic/grammar/: nsl_grammar.py
r5_wired/r5_neuro_symbolic/training/: dataset_generator.py
r5_wired/r5_websocket/hub/: ws_hub.py
r5_wired/r5_websocket/vps_live/: vps_r5_live.html
tenir_governance/: __init__.py  copy_lint.py  ledger_migrate.py  nomenclature.py  policy_engine.py  polymorphic_surface.py  regression_corpus.py  sdk.py  validator.py
tests/: test_coverage_uplift.py  test_policy_edge_cases.py  test_policy_governance_guarantees.py  test_regression_corpus.py  test_sprints_9_10_11.py
